// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-q03nou"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-nhu5fg"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-dy9a5k"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-ayxe9q"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-q03nou"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
